--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,9 +1,9 @@
 # These are supported funding model platforms
 
-[dnplus]: # Replace with up to 4 GitHub Sponsors-enabled usernames e.g., [user1, user2]
-dnplus: # Replace with a single Patreon username
+github: [dnplus]
+patreon: dnplus
 open_collective: # Replace with a single Open Collective username
-dnplus: # Replace with a single Ko-fi username
+ko-fi: dnplus
 tidelift: # Replace with a single Tidelift platform-name/package-name e.g., npm/babel
 community_bridge: # Replace with a single Community Bridge project-name e.g., cloud-foundry
 liberapay: # Replace with a single Liberapay username
