--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,6 +1,7 @@
 # These are supported funding model platforms
 
 github: [dnplus]
+polar: dnplus
 patreon: dnplus
 open_collective: # Replace with a single Open Collective username
 ko_fi: dnplus
